Filling out the index view with YouTube and Twitch embeds.

--- a/source/index.html
+++ b/source/index.html
@@ -1,2 +1,17 @@
 ---
+layout: default
 ---
+
+<div class="embed-container">
+  <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<div class="embed-container">
+  <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
+    <param name="allowFullScreen" value="true">
+    <param name="allowScriptAccess" value="always">
+    <param name="allowNetworking" value="all">
+    <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
+    <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=vlogalonstar&amp;auto_play=true&amp;start_volume=25">
+  </object>
+</div>
