--- a/source/index.html
+++ b/source/index.html
@@ -2,36 +2,44 @@
 layout: default
 ---
 
-<div class="wrapper">
-    <div class="e-all">
-        <div class="e1-e4">
-            <span class="">Vlogalonstar <i>on <a href="http://youtube.com/bryanveloso">YouTube</a></i></span>
-            <div class="embed-container">
-                <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="e6-e8">
-            <span class="">Avalonstar Live <i>on <a href="http://twitch.tv/vlogalonstar">Twitch</a></i></span>
-            <div class="embed-container">
-                <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
-                    <param name="allowFullScreen" value="true">
-                    <param name="allowScriptAccess" value="always">
-                    <param name="allowNetworking" value="all">
-                    <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-                    <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=vlogalonstar&amp;auto_play=true&amp;start_volume=25">
-                </object>
-            </div>
-        </div>
-    </div>
-</div>
+<section class="wrapper">
+  <div class="sv-all">
+    <div class="sv1-sv4">
+      <span class="">Vlogalonstar <i>on <a href="http://youtube.com/bryanveloso">YouTube</a></i></span>
+      <div class="embed-container">
+        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633" frameborder="0" allowfullscreen></iframe>
+      </div>
 
-<div class="wrapper">
-    <ul class="social sx-all">
-        <li class="sx1 facebook"><a href="https://facebook.com/bryanveloso">Facebook</a></li>
-        <li class="sx2 twitter"><a href="https://twitter.com/bryanveloso">Twitter</a></li>
-        <li class="sx3 twitch"><a href="http://twitch.tv/vlogalonstar">Twitch</a></li>
-        <li class="sx4 youtube"><a href="http://youtube.com/bryanveloso">YouTube</a></li>
-        <li class="sx5 vimeo"><a href="http://vimeo.com/bryanveloso">Vimeo</a></li>
-        <li class="sx6 github"><a href="http://github.com/bryanveloso">GitHub</a></li>
-    </ul>
-</div>
+      <div class="background">
+        <p>Once upon a time, Avalonstar started life as a written blog. In the following years...</p>
+      </div>
+    </div>
+    <div class="sv5-sv7">
+      <span class="">Avalonstar Live <i>on <a href="http://twitch.tv/vlogalonstar">Twitch</a></i></span>
+      <div class="embed-container">
+        <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
+          <param name="allowFullScreen" value="true">
+          <param name="allowScriptAccess" value="always">
+          <param name="allowNetworking" value="all">
+          <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
+          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=vlogalonstar&amp;auto_play=true&amp;start_volume=25">
+        </object>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="wrapper">
+  <ul class="social sx-all">
+    <li class="sx1 facebook"><a href="https://facebook.com/bryanveloso">Facebook</a></li>
+    <li class="sx2 twitter"><a href="https://twitter.com/bryanveloso">Twitter</a></li>
+    <li class="sx3 twitch"><a href="http://twitch.tv/vlogalonstar">Twitch</a></li>
+    <li class="sx4 youtube"><a href="http://youtube.com/bryanveloso">YouTube</a></li>
+    <li class="sx5 vimeo"><a href="http://vimeo.com/bryanveloso">Vimeo</a></li>
+    <li class="sx6 github"><a href="http://github.com/bryanveloso">GitHub</a></li>
+  </ul>
+</section>
+
+<section class="wrapper">
+  <p class="hero">Avalonstar is one person's journey to become a jack-of-all-trades, and hopefully master some.</p>
+</section>
