First big design push. Typekit implementation, etc.

--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,18 @@
 layout: default
 ---
 
+<div class="underlay"></div>
 <section class="wrapper">
-  <div class="sv-all">
-    <div class="sv1-sv4">
-      <span class="">Vlogalonstar <i>on <a href="http://youtube.com/bryanveloso">YouTube</a></i></span>
+  <p class="hero"><strong>This is Avalonstar</strong>. One individual's journey to become a jack-of-all-trades, and hopefully master some. </p>
+</section>
+
+<section class="wrapper">
+  <div class="e-all">
+    <div class="e1-e4">
+      <div class="video-statistics">
+        <a href="http://youtube.com/bryanveloso">Vlogalonstar <i>on YouTube</i></a>
+        <a class="subscriber-count" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"> </b> subscribers</a>
+      </div>
       <div class="embed-container">
         <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633" frameborder="0" allowfullscreen></iframe>
       </div>
@@ -14,8 +22,10 @@ layout: default
         <p>Once upon a time, Avalonstar started life as a written blog. In the following years...</p>
       </div>
     </div>
-    <div class="sv5-sv7">
-      <span class="">Avalonstar Live <i>on <a href="http://twitch.tv/vlogalonstar">Twitch</a></i></span>
+    <div class="e5-e8">
+      <div class="video-statistics">
+        <a href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
+      </div>
       <div class="embed-container">
         <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
           <param name="allowFullScreen" value="true">
@@ -38,8 +48,4 @@ layout: default
     <li class="sx5 vimeo"><a href="http://vimeo.com/bryanveloso">Vimeo</a></li>
     <li class="sx6 github"><a href="http://github.com/bryanveloso">GitHub</a></li>
   </ul>
-</section>
-
-<section class="wrapper">
-  <p class="hero">Avalonstar is one person's journey to become a jack-of-all-trades, and hopefully master some.</p>
 </section>
