Moar progress on designy things.

--- a/source/index.html
+++ b/source/index.html
@@ -4,28 +4,26 @@ layout: default
 
 <div class="underlay"></div>
 <section class="wrapper">
-  <p class="hero"><strong>This is Avalonstar</strong>. One individual's journey to become a jack-of-all-trades, and hopefully master some. </p>
+  <p class="hero"><strong>This is Avalonstar</strong>. One individual's journey to become a jack-of-all-trades and hopefully master some. </p>
 </section>
 
 <section class="wrapper">
   <div class="e-all">
-    <div class="e1-e4">
-      <div class="video-statistics">
-        <a href="http://youtube.com/bryanveloso">Vlogalonstar <i>on YouTube</i></a>
-        <a class="subscriber-count" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"> </b> subscribers</a>
-      </div>
+    <div class="e1-e4 youtube">
       <div class="embed-container">
-        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633" frameborder="0" allowfullscreen></iframe>
+        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
-
+      <div class="video-statistics">
+        <a class="e1-e2 video-link" href="http://youtube.com/bryanveloso">Vlogalonstar <i>on YouTube</i></a>
+        <a class="e3-e4 subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"></b> subscribers</a>
+      </div>
       <div class="background">
-        <p>Once upon a time, Avalonstar started life as a written blog. In the following years...</p>
+        <h1><a class="js-recent-youtube-link" href="">Questions & Answers: Passion, Drive and eSports Commentating</a></h1>
+        <h2>What's Vlogalonstar?</h2>
+        <p>Once upon a time, Avalonstar started life as a written blog. </p>
       </div>
     </div>
-    <div class="e5-e8">
-      <div class="video-statistics">
-        <a href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
-      </div>
+    <div class="e5-e8 twitch">
       <div class="embed-container">
         <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
           <param name="allowFullScreen" value="true">
@@ -34,6 +32,16 @@ layout: default
           <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
           <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=vlogalonstar&amp;auto_play=true&amp;start_volume=25">
         </object>
+        <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>Vlogalonstar</strong>!</div>
+      </div>
+      <div class="video-statistics">
+        <a class="e5-e6 video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
+        <a class="e7-e8 subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-twitch-subscriber-count">45</b> subscribers</a>
+      </div>
+      <div class="background">
+        <h1><a class="js-recent-twitch-link" href="">Bryan & Jen Play TERA</a></h1>
+        <h2>What's Avalonstar Live?</h2>
+        <p></p>
       </div>
     </div>
   </div>
