Be more welcoming.

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="underlay"></div>
 <section class="wrapper">
-  <p class="hero"><strong>This is Avalonstar</strong>. One individual's journey to become a jack-of-all-trades and hopefully master some. </p>
+  <p class="hero"><strong>Welcome to Avalonstar</strong>. One individual's journey to become a jack-of-all-trades and hopefully master some. </p>
 </section>
 
 <section class="wrapper">
