More fontage and wordage.

--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@ layout: default
       <div class="background">
         <h1><a class="js-recent-youtube-link" href="">Questions & Answers: Passion, Drive and eSports Commentating</a></h1>
         <h2>What's Vlogalonstar?</h2>
-        <p>Once upon a time, Avalonstar started life as a written blog. </p>
+        <p>Once upon a time, Avalonstar started life as a portfolio. As the years passed, it turned into a blog. Writing happened, for a while. But as with all things, writing took a back seat. <strong>Vlogalonstar</strong> is an attempt to rekindle the magic I found in blogging, only now with video.</p>
       </div>
     </div>
     <div class="e6-e8 twitch">
