Can't really decide what to do here.

--- a/source/index.html
+++ b/source/index.html
@@ -9,13 +9,13 @@ layout: default
 
 <section class="wrapper">
   <div class="e-all">
-    <div class="e1-e5 youtube">
+    <div class="e1-e4 youtube">
       <div class="embed-container">
-        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="video-statistics">
-        <a class="e1-e4 video-link" href="http://youtube.com/bryanveloso">Vlogalonstar <i>on YouTube</i></a>
-        <a class="e5 subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"></b> subscribers</a>
+        <a class="e1-e3 video-link" href="http://youtube.com/bryanveloso">Vlogalonstar <i>on YouTube</i></a>
+        <a class="e4 subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"></b> subscribers</a>
       </div>
       <div class="background">
         <h1><a class="js-recent-youtube-link" href="">Questions & Answers: Passion, Drive and eSports Commentating</a></h1>
@@ -23,7 +23,7 @@ layout: default
         <p>Once upon a time, Avalonstar started life as a portfolio. As the years passed, it turned into a blog. Writing happened, for a while. But as with all things, writing took a back seat. <strong>Vlogalonstar</strong> is an attempt to rekindle the magic I found in blogging, only now with video.</p>
       </div>
     </div>
-    <div class="e6-e8 twitch">
+    <div class="e5-e8 twitch">
       <div class="embed-container">
         <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
           <param name="allowFullScreen" value="true">
@@ -35,13 +35,13 @@ layout: default
         <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>Vlogalonstar</strong>!</div>
       </div>
       <div class="video-statistics">
-        <a class="e6-e7 video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
+        <a class="e5-e7 video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
         <a class="e8 subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-twitch-subscriber-count">45</b> subscribers</a>
       </div>
       <div class="background">
         <h1><a class="js-recent-twitch-link" href="">Bryan & Jen Play TERA</a></h1>
         <h2>What's Avalonstar Live?</h2>
-        <p></p>
+        <p>Once upon a time, I started gaming. Years later, I was still gaming. Fast foward just a bit, I found myself stumbling on a phenomenon called <em>shoutcasting</em>. <strong>Avalonstar Live</strong> is my hilarious attempt at becoming a game streamer and shoutcaster.</p>
       </div>
     </div>
   </div>
