Gonna want controls. :|

--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@ layout: default
   <div class="e-all">
     <div class="e1-e4 youtube">
       <div class="embed-container">
-        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="video-statistics">
         <a class="e1-e3 video-link" href="http://youtube.com/bryanveloso">Vlogalonstar <i>on YouTube</i></a>
