Having to get the hang of Jekyll again. This should protect everything.

--- a/source/index.html
+++ b/source/index.html
@@ -25,14 +25,14 @@ layout: default
     </div>
     <div class="twitch">
       <div class="embed-container">
-        <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=vlogalonstar" bgcolor="#000000">
+        <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=avalonstartv" bgcolor="#000000">
           <param name="allowFullScreen" value="true">
           <param name="allowScriptAccess" value="always">
           <param name="allowNetworking" value="all">
           <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=vlogalonstar&amp;auto_play=true&amp;start_volume=25">
+          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=avalonstartv&amp;auto_play=true&amp;start_volume=25" />
         </object>
-        <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>Vlogalonstar</strong>!</div>
+        <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>AvalonstarTV</strong>!</div>
       </div>
       <div class="video-statistics">
         <a class="video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
