--- a/_source/index.html
+++ b/_source/index.html
@@ -1,48 +1,83 @@
 ---
-layout: default
+layout: basic
+body_class: home
 ---
-
-<div class="underlay"></div>
-<section class="wrapper">
-  <p class="hero"><strong>Welcome to Avalonstar</strong>. One individual's journey to become a jack-of-all-trades and hopefully master some.</p>
-</section>
-
-<section class="wrapper">
-  <div class="">
-    <div class="youtube">
-      <div class="embed-container">
-        <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div class="video-statistics">
-        <a class="video-link" href="http://youtube.com/bryanveloso">Avalonstar <i>on YouTube</i></a>
-        <a class="subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"></b> subscribers</a>
-      </div>
-      <div class="background">
-        <h1><a class="js-recent-youtube-link" href="">Questions &amp; Answers: Passion, Drive and eSports Commentating</a></h1>
-        <h2>What's Avalonstar.tv?</h2>
-        <p>Once upon a time, Avalonstar started life as a portfolio. As the years passed, it turned into a blog. Writing happened, for a while. But as with all things, writing took a back seat. <strong>Vlogalonstar</strong> is an attempt to rekindle the magic I found in blogging, only now with video.</p>
-      </div>
-    </div>
-    <div class="twitch">
-      <div class="embed-container">
-        <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=avalonstartv" bgcolor="#000000">
-          <param name="allowFullScreen" value="true">
-          <param name="allowScriptAccess" value="always">
-          <param name="allowNetworking" value="all">
-          <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-          <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=avalonstartv&amp;auto_play=true&amp;start_volume=25" />
-        </object>
-        <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>AvalonstarTV</strong>!</div>
-      </div>
-      <div class="video-statistics">
-        <a class="video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
-        <a class="subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-twitch-subscriber-count">45</b> subscribers</a>
-      </div>
-      <div class="background">
-        <h1><a class="js-recent-twitch-link" href="">Bryan &amp; Jen Play TERA</a></h1>
-        <h2>What's Avalonstar Live?</h2>
-        <p>Once upon a time, I started gaming. Years later, I was still gaming. Fast foward just a bit, I found myself stumbling on a phenomenon called <em>shoutcasting</em>. <strong>Avalonstar Live</strong> is my hilarious attempt at becoming a game streamer and shoutcaster.</p>
-      </div>
-    </div>
+<div class="introductory-tile">
+  <div class="tile primary-introduction">
+    <div class="site-logo {% if page.category %}sans-star{% endif %}"></div>
+    <!-- <a href="{{ root_path }}" class="site-logotype">Avalonstar</a> -->
   </div>
-</section>
+  <div class="tile secondary-introduction">
+    <div class="hero">
+      <span class="site-established">EST. 2000</span>
+      <a href="{{ root_path }}" class="site-logotype">Avalonstar</a>
+    </div>
+    <div class="recents">
+      <div class="recent-item recent-prose">
+        <span class="ss-icon ss-notebook"></span>
+      {% for post in site.categories.prose limit:1 %}
+        <span class="recent-category entry-category">Recent {{ post.category }}</span>
+        <h2 class="recent-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      {% endfor %}
+      </div>
+      <div class="recent-item recent-video">
+        <span class="ss-icon ss-clapboard"></span>
+    {% for post in site.categories.video limit:1 %}
+        <span class="recent-category entry-category">Recent {{ post.category }}</span>
+        <h2 class="recent-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      {% endfor %}
+      </div>
+    </div>
+    <span class="ss-icon ss-navigatedown"></span>
+  </div>
+</div>
+
+<div id="content" role="main">
+{% include navigation.html %}
+{% for post in site.posts limit:5 %}
+  <a href="{{ post.url }}">{{ post.title }}</a>
+{% endfor %}
+
+  <div class="underlay"></div>
+  <section class="wrapper">
+  </section>
+
+    <div class="home-video">
+      <div class="video-type youtube">
+        <div class="embed-container">
+          <iframe id="ytplayer" src="http://www.youtube.com/embed/?vq=hd720&amp;listType=playlist&amp;list=PLD47E8E769D01C633&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-statistics">
+          <a class="video-link" href="http://youtube.com/bryanveloso">Avalonstar <i>on YouTube</i></a>
+          <a class="subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-youtube-subscriber-count"></b></a>
+          <span class="ss-icon ss-tv"></span>
+        </div>
+        <div class="background">
+          <!-- <h1><a class="js-recent-youtube-link" href="">Questions &amp; Answers: Passion, Drive and eSports Commentating</a></h1> -->
+          <p>Avalonstar started life as a portfolio. As the years passed, it turned into a blog. Writing happened, for a while. But as with all things, writing took a back seat. <strong>Avalonstar.tv</strong> is an attempt to rekindle the magic I found in blogging, only now with video.</p>
+        </div>
+      </div>
+      <div class="video-type twitch">
+        <div class="embed-container">
+          <object type="application/x-shockwave-flash" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=avalonstartv" bgcolor="#000000">
+            <param name="allowFullScreen" value="true">
+            <param name="allowScriptAccess" value="always">
+            <param name="allowNetworking" value="all">
+            <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
+            <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=avalonstartv&amp;auto_play=true&amp;start_volume=25" />
+          </object>
+          <div class="video-error">Twitch doesn't support iFrame embedding... yet. But don't worry, download <a href="http://itunes.apple.com/us/app/twitchtv/id460177396?mt=8&uo=4" target="itunes_store">Twitch</a> and search for <strong>AvalonstarTV</strong>!</div>
+        </div>
+        <div class="video-statistics">
+          <a class="video-link" href="http://twitch.tv/vlogalonstar">Avalonstar Live <i>on Twitch</i></a>
+          <a class="subscriber-link" href="http://youtube.com/user/bryanveloso/subscribers"><b class="js-twitch-subscriber-count">45</b></a>
+          <span class="ss-icon ss-tv"></span>
+        </div>
+        <div class="background">
+          <!-- <h1><a class="js-recent-twitch-link" href="">Bryan &amp; Jen Play TERA</a></h1> -->
+          <p>Once upon a time, I started gaming. Years later, I was still gaming. Fast foward just a bit, I found myself stumbling on a phenomenon called <em>shoutcasting</em>. <strong>Avalonstar Live</strong> is my hilarious attempt at becoming a game streamer and shoutcaster.</p>
+        </div>
+      </div>
+    </div>
+
+</div>
