Don't use "layout" if we don't have to. :D

--- a/_source/index.html
+++ b/_source/index.html
@@ -42,13 +42,13 @@ body_class: home
     </header>
     <ul class="recent-list">
     {% for post in site.posts limit:10 %}
-      <li class="recent-list-item recent-{{ post.layout }}">
+      <li class="recent-list-item recent-{{ post.category }}">
         <div>
           <h2 class="recent-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-          <time class="recent-published">{{ post.layout }} &middot; {{ post.date | date: "%B %-d, %Y" }}</time>
+          <time class="recent-published">{{ post.category }} &middot; {{ post.date | date: "%B %-d, %Y" }}</time>
         </div>
-        {% if post.layout == "prose" %}<span class="ss-icon ss-notebook"></span>{% endif %}
-        {% if post.layout == "video" %}<span class="ss-icon ss-clapboard"></span>{% endif %}
+        {% if post.category == "prose" %}<span class="ss-icon ss-notebook"></span>{% endif %}
+        {% if post.category == "video" %}<span class="ss-icon ss-clapboard"></span>{% endif %}
       </li>
     {% endfor %}
     </ul>
